--- a/src/mysql.properties
+++ b/src/mysql.properties
@@ -1,3 +1,3 @@
-connectionURL=jdbc\:mysql\://202.117.16.136\:3306/lubase?useUnicode\=true&characterEncoding\=UTF-8
-dbUserName=root
-dbPassword=song
+connectionURL=jdbc\:mysql\://\:3306/lubase?useUnicode\=true&characterEncoding\=UTF-8
+dbUserName=
+dbPassword=
